# libbutterworth

./: CMakeLists.txt  LICENSE  LibButterworthConfig.cmake  Readme.md
example/: CMakeLists.txt  main.cpp
libbutterworth/: biquad.cpp  biquad.h  biquad_tests.cpp  butterworth.cpp  butterworth.h  butterworth_tests.cpp  filter_design.cpp  filter_design.h  filter_design_tests.cpp  utils.cpp  utils.h  utils_tests.cpp
test_data/: generate_data.py  vis_example_output.py
